# vacancy-finder

./: .gitignore  README.md  main.py  pyproject.toml
src/: base_api.py  base_saver.py  base_vacancy_storage.py  functions.py  head_hunter_api.py  json_saver.py  json_vacancy_storage.py  vacancy.py
tests/: test_hh_api.py  test_vacancy.py
