[tool.poetry]
name = "vacancy-finder"
version = "0.1.0"
description = ""
authors = ["nnikitenko <nnikitenko@aorti.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
